@@ -208,6 +208,13 @@ static void php_is_type(INTERNAL_FUNCTION_PARAMETERS, int type)
 				RETURN_FALSE;
 			}
 		}
+		if (type == IS_RESOURCE) {
+			char *type_name;
+			type_name = zend_rsrc_list_get_rsrc_type(Z_LVAL_PP(arg) TSRMLS_CC);
+			if (!type_name) {
+				RETURN_FALSE;
+			}
+		}
 		RETURN_TRUE;
 	} else {
 		RETURN_FALSE;
